Fixing contact page alignment

--- a/source/stylesheets/pages/_contact.css.scss
+++ b/source/stylesheets/pages/_contact.css.scss
@@ -1,4 +1,5 @@
 #contact {
+  position: relative;
 
   @include breakpoint(mobile) {
     height: 300px;
@@ -6,9 +7,14 @@
 
   .content {
     width: 500px;
-    height: 300px;
+    height: 200px;
     margin: auto;
-    padding-top: 20%;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 100px;
+    right: 0;
 
     @include breakpoint(mobile) {
       width: auto;
@@ -22,7 +28,6 @@
     width: 500px;
     margin: auto;
     text-align: center;
-    margin-left: 50px;
 
     @include breakpoint(mobile) {
       width: auto;
@@ -37,7 +42,6 @@
     -moz-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
-    margin-left: 45px;
 
     @include breakpoint(mobile) {
       width: 98%;
@@ -63,7 +67,6 @@
   }
 
   .social {
-    margin-left: 100px;
     @include breakpoint(mobile) {
       margin: 0;
     }
